נעה אשכול, עוגת יום הולדת, כדורי קטניות, משחקי הכס

--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@ Error message and password prompt
 
 <li>$:/state/folded/המעבדה</li>
 
+<li>$:/state/folded/כדורי קטניות ברוטב קוקוס וקארי ירוק</li>
+
 <li>$:/state/Link/--15630481/search</li>
 
 <li>$:/state/Link/--2004176897/search</li>
@@ -631,6 +633,8 @@ Error message and password prompt
 
 <li>ירקות קלויים</li>
 
+<li>כדורי קטניות ברוטב קוקוס וקארי ירוק</li>
+
 <li>כוכב המשאלות 01</li>
 
 <li>כוכב המשאלות 02</li>
@@ -718,6 +722,8 @@ Error message and password prompt
 <li>כשהם ישנים</li>
 
 <li>כשהמכוניות היו יפות</li>
+
+<li>כתב התנועה אשכול-וכמן</li>
 
 <li>להתרועע עם האחות ב. כהן</li>
 
@@ -839,6 +845,8 @@ Error message and password prompt
 
 <li>מרק עם קניידלך</li>
 
+<li>משחקי הכס</li>
+
 <li>משנים</li>
 
 <li>משפחת באומן</li>
@@ -906,6 +914,8 @@ Error message and password prompt
 <li>עוגיות קימל</li>
 
 <li>עוגיות שוקולד צ'יפס</li>
+
+<li>עוגת יום הולדת</li>
 
 <li>עוגת מוקה</li>
 
@@ -8891,6 +8901,9 @@ Error message and password prompt
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
 <pre>show</pre>
 </div>
+<div created="20180511193133078" modified="20180511193137282" title="$:/state/folded/כדורי קטניות ברוטב קוקוס וקארי ירוק">
+<pre>show</pre>
+</div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
 <pre></pre>
 </div>
@@ -8933,7 +8946,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חשיפה לצפון]] הסופרנוס [[כריסטופר מולטיסנטי]] [[דם אמיתי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כתב התנועה אשכול-וכמן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8953,7 +8966,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180507142818220" title="$:/temp/search">
+<div created="20161023184814872" modified="20180529122423733" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9927,7 +9940,7 @@ well,
 
 </pre>
 </div>
-<div created="20170331205112322" modified="20170612152618236" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
+<div created="20170331205112322" modified="20180510194317312" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
 <pre>[img[pictures/alexandra.jpg]]
 
 !!![[גורה]]:
@@ -11344,12 +11357,12 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20180414181844848" modified="20180416141801334" tags="סדרות מוזיקה" title="האוס">
+<div created="20180414181844848" modified="20180529122420506" tags="סדרות מוזיקה" title="האוס">
 <pre>[img[pictures/house.jpg]]
 
 !!![[הצוות]]:
 
-אחרי שבמסגרת המיזם השיקומי של [[וילסון|http://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] את [[האוס|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], משלם וילסון [[לפורמן|http://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] [[וצ'ייס|http://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[לא רק|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) בעבור שיצאו איתו לבלות, מגיעה [[סצנת קריוקי בלתי נשכחת|https://www.youtube.com/watch?v=BVGGG2J0_7M]]. עם השיר [[רכבת חצות לג'ורג'יה|https://www.youtube.com/watch?v=MDtAuLwa0ZE]] שהיה להיט ב-1973. זה קורה לקראת סוף העונה השישית, בה האוס, שהכניס עצמו לאשפוז גמילה ושוחרר ממנו, הולך ומשתפר וכך גם התסריט. [[זה|http://www.imdb.com/title/tt0412142/]] נהיה נעים ומצחיק יותר, [[13 הורסת|http://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]]. עוד לא סיימנו את עונה 6, כלומר יש  הסוף של 6 ועוד שתיים, אבל לפי [[הקליפ הזה|https://www.youtube.com/watch?v=O8pCxcUURaw]] - עוד קצת טוב ונשתגע.
+אחרי שבמסגרת המיזם השיקומי של [[וילסון|http://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] את [[האוס|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], משלם וילסון [[לפורמן|http://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] [[וצ'ייס|http://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[לא רק|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) בעבור שיצאו איתו לבלות, מגיעה [[סצנת קריוקי אדירה|https://www.youtube.com/watch?v=BVGGG2J0_7M]] עם השיר [[רכבת חצות לג'ורג'יה|https://www.youtube.com/watch?v=MDtAuLwa0ZE]] שהיה להיט ב-1973. זה קורה לקראת סוף העונה השישית, בה האוס, שהכניס עצמו לאשפוז גמילה ושוחרר ממנו, הולך ומשתפר וכך גם התסריט. [[זה|http://www.imdb.com/title/tt0412142/]] נהיה נעים ומצחיק יותר, [[13 הורסת|http://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]]. עוד לא סיימנו את עונה 6, כלומר יש  הסוף של 6 ועוד שתיים, אבל לפי [[הקליפ הזה|https://www.youtube.com/watch?v=O8pCxcUURaw]] - עוד קצת טוב ונשתגע.
 
 
 
@@ -12391,6 +12404,69 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20180511192958752" modified="20180517135424460" tags="[[חיות אוכל]] הצוות" title="כדורי קטניות ברוטב קוקוס וקארי ירוק">
+<pre>[img[pictures/cadurey-kitniyot.jpg]]
+
+!!![[הצוות]]:
+
+
+
+החומרים:
+
+לכדורים:
+
+*כוס קטניות מעורבות לקדרה, מבושלות עד ריכוך ומסוננות
+*ביצה
+*3 כפות פרורי לחם
+*3 כפות קמח לבן 
+*קורט אבקת אפייה
+
+לרוטב:
+
+*2 כפות שמן חריף
+*2 כפות שמן תירס
+*4 גבעולי בצל ירוק
+*2 גזרים חתוכים למקלונים דקים ולא ארוכים
+*כוס חלב קוקוס
+*1-2 כפות קארי ירוק
+*מים
+*שלושה עלי כוסברה
+*כף מיץ ליים
+*פלפל שחור גרוס
+*מלח ים גס
+*שני עלי אורגנו
+
+להגשה:
+
+*כוסברה קצוצה
+*שמן קפיר ליים
+
+אופן ההכנה:
+
+1. בסיר לא גבוה על אש קטנה מחממים שתי כפות שמן תירס ושתי כפות שמן חריף, מוסיפים את הבצל הירוק 
+
+2. כשהבצל מזהיב מוסיפים את מקלוני הגזר וממשיכים לצלות עד שהגזר מזהיב
+
+3. מוסיפים את חלב הקוקוס ואת הקארי הירוק ומערבבים את שהנוזל אחיד
+
+4. מוסיפים 2 כוסות מים וממשיכים לערבב עד רתיחה
+
+5. מנמיכים את האש ונותנים לרוטב להתבשל כמה דקות
+
+6. בינתיים מערבבים בקערה את החומרים של כדורי הקטניות
+
+7. מוסיפים את התבלינים, ממשיכים לבשל 15 דקות נוספות.
+
+8. בין לבין מערבבים את תערובת הקטניות
+
+9. יוצרים כדורי קטניות בקוטר של 2-3 סנטימטרים  ומכניסים לסיר בעדינות (יוצאים כ-20 כדורים). 
+
+10. מכסים את הסיר ומבשלים בסך הכל עוד כ-40 דקות (מידי עשר דקות הופכים את הכדורים בעדינות, וכמובן שאפשר לתקן את הטעם)
+
+11. מגישים על אורז לבן ומעל מפזרים כוסברה קצוצה . יויו אוהב להוסיף 2 טיפות שמן קפיר ליים 
+
+(אורז לבן: בסיר - כוס אורז, שתי כוסות מים וכמה גרגרי מלח על אש נמוכה עד שמתאדים הנוזלים)</pre>
+</div>
 <div created="20161112194346716" modified="20171204153331389" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 01">
 <pre> 
 [img[pictures/hadira.jpg]]
@@ -13067,6 +13143,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 לא השתמשו בחגורות בטיחות''
 </pre>
 </div>
+<div created="20180508163939540" modified="20180604184154715" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="כתב התנועה אשכול-וכמן">
+<pre>[img[pictures/ctav-tnua.jpg]]
+
+!!![[אירי]]:
+
+[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%A0%D7%A2%D7%94%20%D7%90%D7%A9%D7%9B%D7%95%D7%9C%20%D7%91%D7%99%D7%92.bmp]] התמונה ממנה גורה ציירה את הציור, בו רואים את להקת &quot;ריקודי חדר&quot; של  [[נעה אשכול|https://he.wikipedia.org/wiki/%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C]], שהייתה למעשה אומנית חוקרת תנועה, ויצרה עם תלמידה [[אברהם וכמן|https://he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%95%D7%9B%D7%9E%D7%9F]] את [[כתב התנועה אשכול- וכמן|https://he.wikipedia.org/wiki/%D7%9B%D7%AA%D7%91_%D7%94%D7%AA%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C-%D7%95%D7%9B%D7%9E%D7%9F]]. את  האטיודים שנובעים מהכתב מבצעים גם היום לקול מטרונום [[חברי הלהקה|https://www.youtube.com/watch?v=-C1tJdlXRRg]], שעבדו עימה לאורך שנים ארוכות בביתה בחולון, שם גם יצרה משאריות בדים [[שטיחי קיר|http://www.hetzroni.com/noa-rugs/noa_rugs.php]] מלאי כיוונים. הבית הלהקה והכתב [[ממשיכים|http://noaeshkol.org/]] ואני מעריצה את [[רחלי נול כהנא|http://info.smkb.ac.il/home/home.exe/45079/65721]]
+
+</pre>
+</div>
 <div created="20170701135805872" modified="20170701184938487" tags="[[הנה, כך]]" title="להתרועע עם האחות ב. כהן">
 <pre>,,^^[img[pictures/sisterbotcoen-mordech.png]]
 תודה ל[[Mordech@|https://tooot.im/@Mordech]] על [[לוגו התות|https://github.com/Toootim/Resources/blob/master/artwork/MordechBrown.png]]
@@ -13447,12 +13532,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180410150429522" modified="20180410152844192" tags="[[הנחלה בה גדלתי]] [[חיות אוכל]] [[כשהם ישנים]] [[מטא בדיון]]" title="מגבות מטבח">
+<div created="20180410150429522" modified="20180527115913637" tags="[[הנחלה בה גדלתי]] [[חיות אוכל]] [[כשהם ישנים]] [[מטא בדיון]]" title="מגבות מטבח">
 <pre>[img[pictures/magavot-mitbach.jpg]]
 
 !!![[אווה]]:
 
-למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן.</pre>
+למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן. מגבות המטבח הן חברות.</pre>
 </div>
 <div created="20170926191733045" modified="20171002140653886" tags="הסופרנוס" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
@@ -13840,6 +13925,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אני יודע שזה נשמע מרק אנמי, אבל ירקות טובים אורגני-בלאדי-טרי, מלח ים גס, פלפל שחור גרוס, הם מלאי טעם [[ואין צורך ביותר|less is more]].
 
 את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים.</pre>
+</div>
+<div created="20180603160754396" modified="20180604183915794" tags="סדרות [[אחיות חוץ]]" title="משחקי הכס">
+<pre>[img[pictures/game-of-thrones.jpg]]
+
+!!![[יויו]]:
+
+חבר זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]].
+</pre>
 </div>
 <div created="20170802165524913" modified="20170802234536583" tags="[[נאמני הגנזך]]" title="משנים">
 <pre>[img[pictures/meshanim.jpg]]
@@ -14414,6 +14507,35 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 5. מחממים תנור ל 170 מעלות צלזיוס, מרפדים שתי תבניות של התנור בנייר אפייה
 
 6. יוצרים כדורים בקוטר של 2-21/2 סינטמטרים, משטחים אותם מעט, מניחים על נייר האפייה במרחק של 1 סנטימטר בערך אחד מהשני ואופים כ-20 דקות</pre>
+</div>
+<div created="20180516163354756" modified="20180517134631622" tags="[[כשהם ישנים]] [[חיות אוכל]]" title="עוגת יום הולדת">
+<pre>[img[pictures/birthday-cake.jpg]]
+
+!!![[אווה]]:
+
+מאי הוא חודש יום ההולדת של [[איריס|איריס הבת]] ושלי, ולרוב אני מכינה לה טורט עם קצפת ותותים, רק שהשנה התותים כבר ממש סמרטוטים ומתאימים לריבה או רטבים בלבד
+
+אז במקום השתמשתי באננס, קיווי, דובדבני אמרנה מקופסה ותותי עץ וזה היה מוצלח.
+
+אופן ההכנה:
+
+1. מכינים [[טורט]] בתבנית 26 ונותנים לה להתקרר
+
+2. מקציפים עד קצפת יציבה 2 מיכלי שמנת מתוקה עם ארבע כפות שטוחות של סוכר
+
+3. מכינים פרות נקיים וחתוכים
+
+4. בעזרת סכין לחם חוצים את העוגה לרוחבה, ומניחים את חלקה התחתון בתבנית
+
+5. מורחים חצי מכמות הקצפת ומקשטים בפרות
+
+6. מניחים מעל את החצי השני של העוגה
+
+7. מורחים את החצי השני של הקצפת ומעל מקשטים בשאר הפרות
+
+8. מניחים בכלי אטום ומקררים 7-8 שעות לפחות
+
+</pre>
 </div>
 <div created="20170413101450070" modified="20170413112450089" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
 <pre>[img[pictures/ugat-moka.jpg]]
