--- a/index.html
+++ b/index.html
@@ -8950,7 +8950,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מתכונים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9980,12 +9980,12 @@ well,
 
 </pre>
 </div>
-<div created="20180130191838651" modified="20180605153425446" tags="הצוות [[קופים ממונעים]]" title="אמהות">
+<div created="20180130191838651" modified="20180605160638651" tags="הצוות [[קופים ממונעים]]" title="אמהות">
 <pre>[img[pictures/imahot.jpg]]
 
 
 
- אמהות זה משהו
+ אמהות זה אחלה, [[זה גדול|https://www.youtube.com/watch?v=QnAoG1e0hDw]]
 
 &lt;&lt;list-links filter:&quot;[tag[אמהות]]&quot;&gt;&gt;</pre>
 </div>
