--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -8950,7 +8950,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אמהות מתכונים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]] [[קופים ממונעים]] [[תחבורה ציבורית]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9980,12 +9980,12 @@ well,
 
 </pre>
 </div>
-<div created="20180130191838651" modified="20180605160431111" tags="הצוות [[קופים ממונעים]]" title="אמהות">
+<div created="20180130191838651" modified="20180605160638651" tags="הצוות [[קופים ממונעים]]" title="אמהות">
 <pre>[img[pictures/imahot.jpg]]
 
 
 
- אמהות [[זה אחלה, וזה גדול|https://www.youtube.com/watch?v=5YxeHFU8SKE]]
+ אמהות זה אחלה, [[זה גדול|https://www.youtube.com/watch?v=QnAoG1e0hDw]]
 
 &lt;&lt;list-links filter:&quot;[tag[אמהות]]&quot;&gt;&gt;</pre>
 </div>
@@ -16688,7 +16688,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170817170010531" modified="20170818045231062" title="תחבורה ציבורית">
+<div created="20170817170010531" modified="20180605163015741" tags="[[קופים ממונעים]]" title="תחבורה ציבורית">
 <pre>[img[pictures/tachbura-ziburit.jpg]]
 
 !!![[יויו]]:
