--- a/index.html
+++ b/index.html
@@ -8950,7 +8950,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="imagine [[האחיות כהן]]" title="$:/StoryList">
+<div list="מיזונפלציה [[כרבולת בבית החזה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8970,7 +8970,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180606094623351" title="$:/temp/search">
+<div created="20161023184814872" modified="20180607162148039" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13047,12 +13047,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180605150218529" modified="20180605162206073" tags="[[קופים ממונעים]]" title="כרבולת בבית החזה">
+<div created="20180605150218529" modified="20180607162637281" tags="[[קופים ממונעים]]" title="כרבולת בבית החזה">
 <pre>[img[pictures/carbolet.jpg]]
 
 !!![[יויו]]:
 
-היה רגע בעברי בו שמתי לב שכשאני מבסוט מעצמי זה מלווה בהתנפחות קלה של בית החזה משל כרבולת של תרנגול מלא אגו על גבול הפעלת הכנפיים וקריאה מתגורר שם.</pre>
+היה רגע בעברי בו שמתי לב, שכשאני מבסוט מעצמי בעקבות איזו מחשבה שנראית לי מבריקה למשל, או משהו שעשיתי - זה מלווה בהתנפחות קלה של בית החזה משל כרבולת של תרנגול מלא אגו על גבול הפעלת הכנפיים וקריאה מתגוררת שם.</pre>
 </div>
 <div created="20170621135717036" modified="20180605131611882" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
@@ -13648,7 +13648,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20180605152050701" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20180607162438840" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
 
@@ -13657,7 +13657,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 על פי ז'נבייב, [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה [[ונקיון|מנקים היטב]].
 
 
-בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או [[מסבתא|סבתא שלנו]], מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
+בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את [[המתכון|מתכונים]] או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או [[מסבתא|סבתא שלנו]], מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
 
 &lt;img style=&quot;float:left; max-width:33%; margin: 0.5em&quot; src=&quot;pictures/knives.jpg&quot;&gt;
 לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
