קרל אובה, רוסטביף, הסמויה, שוקולד פאדג', להרוג את איב

--- a/index.html
+++ b/index.html
@@ -559,6 +559,8 @@ Error message and password prompt
 
 <li>הסיפור על גורה, שסופר לאווה, על ידי יויו</li>
 
+<li>הסמויה</li>
+
 <li>הספלים מהם אנו שותים</li>
 
 <li>הספנית</li>
@@ -726,6 +728,8 @@ Error message and password prompt
 <li>כשהמכוניות היו יפות</li>
 
 <li>כתב התנועה אשכול-וכמן</li>
+
+<li>להרוג את איב</li>
 
 <li>להתרועע עם האחות ב. כהן</li>
 
@@ -1023,6 +1027,8 @@ Error message and password prompt
 
 <li>קראסט תפוחים</li>
 
+<li>קרל אובה קנאוסגורד</li>
+
 <li>קרן</li>
 
 <li>ראשל</li>
@@ -1032,6 +1038,8 @@ Error message and password prompt
 <li>רוז'ה</li>
 
 <li>רוטב בשאמל</li>
+
+<li>רוסטביף</li>
 
 <li>רזיאל ורפאל</li>
 
@@ -1048,6 +1056,8 @@ Error message and password prompt
 <li>שה פניס</li>
 
 <li>שואה</li>
+
+<li>שוקולד פאדג'</li>
 
 <li>שותה עם גורה</li>
 
@@ -8938,10 +8948,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180605155016589" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180630112232795" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180605155022542" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180630112634758" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8950,7 +8960,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מיזונפלציה [[כרבולת בבית החזה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הסמויה רוסטביף [[שוקולד פאדג']] [[קרל אובה קנאוסגורד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8970,7 +8980,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180607162148039" title="$:/temp/search">
+<div created="20161023184814872" modified="20180627131306972" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11361,12 +11371,12 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20180414181844848" modified="20180529122420506" tags="סדרות מוזיקה" title="האוס">
+<div created="20180414181844848" modified="20180614113118052" tags="סדרות מוזיקה" title="האוס">
 <pre>[img[pictures/house.jpg]]
 
 !!![[הצוות]]:
 
-אחרי שבמסגרת המיזם השיקומי של [[וילסון|http://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] את [[האוס|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], משלם וילסון [[לפורמן|http://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] [[וצ'ייס|http://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[לא רק|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) בעבור שיצאו איתו לבלות, מגיעה [[סצנת קריוקי אדירה|https://www.youtube.com/watch?v=BVGGG2J0_7M]] עם השיר [[רכבת חצות לג'ורג'יה|https://www.youtube.com/watch?v=MDtAuLwa0ZE]] שהיה להיט ב-1973. זה קורה לקראת סוף העונה השישית, בה האוס, שהכניס עצמו לאשפוז גמילה ושוחרר ממנו, הולך ומשתפר וכך גם התסריט. [[זה|http://www.imdb.com/title/tt0412142/]] נהיה נעים ומצחיק יותר, [[13 הורסת|http://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]]. עוד לא סיימנו את עונה 6, כלומר יש  הסוף של 6 ועוד שתיים, אבל לפי [[הקליפ הזה|https://www.youtube.com/watch?v=O8pCxcUURaw]] - עוד קצת טוב ונשתגע.
+אחרי שבמסגרת המיזם השיקומי של [[וילסון|http://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] את [[האוס|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], משלם וילסון [[לפורמן|http://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] [[וצ'ייס|http://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[לא רק|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) בעבור שיצאו איתו לבלות, מגיעה [[סצנת קריוקי אדירה|https://www.youtube.com/watch?v=BVGGG2J0_7M]] עם השיר [[רכבת חצות לג'ורג'יה|https://www.youtube.com/watch?v=MDtAuLwa0ZE]] שהיה להיט ב-1973. זה קורה לקראת סוף העונה השישית, בה האוס, שהכניס עצמו לאשפוז גמילה ושוחרר ממנו, הולך ומשתפר וכך גם התסריט. [[זה|http://www.imdb.com/title/tt0412142/]] נהיה נעים ומצחיק יותר. גם [[13 הורסת|http://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]]. עוד לא סיימנו את עונה 6, כלומר יש  הסוף של 6 ועוד שתיים, אבל לפי [[הקליפ הזה|https://www.youtube.com/watch?v=O8pCxcUURaw]] - עוד קצת טוב ונשתגע.
 
 
 
@@ -11868,6 +11878,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;list-links filter:&quot;[tag[הסיפור על גורה]]&quot;&gt;&gt;
 
 
+
+</pre>
+</div>
+<div created="20180619140440878" modified="20180630112924806" tags="סדרות" title="הסמויה">
+<pre>[img[pictures/the-wire.jpg]]
+
+!!![[אירי]]:
+
+על מה [[לסטר פרימן|https://www.imdb.com/name/nm0676370/?ref_=tt_cl_t9]] חושב כשהוא בונה מיניאטורות של רהיטים עתיקים? על [[האזנות סתר|https://www.imdb.com/title/tt0306414/]] כמובן.
+ומה קורה עם [[דוקי|https://www.imdb.com/name/nm2369266/?ref_=ttfc_fc_cl_t32]] הילד [[הנפלא|https://www.youtube.com/watch?v=bqY7nfHBm24]] מחבורת הילדים הנפלאה של עונה ארבע? ממליצה לכם לראות גם אם יהיו רגעים בהם לבכם יישבר.
 
 </pre>
 </div>
@@ -13163,6 +13183,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20180614102328845" modified="20180614172502350" tags="סדרות" title="להרוג את איב">
+<pre>[img[pictures/killing-eve.jpg]]
+
+!!![[אירי וגורה]]:
+
+[[כשאיב פלסטרי|https://www.imdb.com/name/nm0644897/?ref_=tt_cl_t1]] רוצה לתפוס את [[וילנל|https://www.imdb.com/name/nm3069650/?ref_=tt_cl_t2]], וילנל נותנת לה ולנו [[גוד טיים|https://www.youtube.com/watch?v=SBvNZaELKpU]]. צחקנו, התרגשנו, ראינו את [[מרטין|https://www.imdb.com/name/nm0091035/?ref_=tt_cl_t4]] [[מהגשר|הגשר]], את [[קרולין מרטנס|https://www.imdb.com/name/nm0789716/?ref_=tt_cl_t3]],  וכמובן את כריסטיאנה [[מהאנטומיה של גריי|האנטומיה של גריי]]. היה [[כיף|https://www.imdb.com/title/tt7016936/]], ואנחנו מוסיפות ראיון רדיו מצולם נחמד עם [[סנדרה|https://www.youtube.com/watch?v=S0Fdo0mbFdE]]</pre>
+</div>
 <div created="20170701135805872" modified="20170701184938487" tags="[[הנה, כך]]" title="להתרועע עם האחות ב. כהן">
 <pre>,,^^[img[pictures/sisterbotcoen-mordech.png]]
 תודה ל[[Mordech@|https://tooot.im/@Mordech]] על [[לוגו התות|https://github.com/Toootim/Resources/blob/master/artwork/MordechBrown.png]]
@@ -14111,12 +14138,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20180604194100269" tags="" title="סדרות">
+<div created="20170711173812724" modified="20180610132445765" tags="" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
 
-לאחר חיפושים, מגיע רגע בו לנרט, השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבל&quot;ז שוכ&quot;ו ק&quot;ר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
+לאחר חיפושים, מגיע רגע בו [[לנרט|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבל&quot;ז שוכ&quot;ו ק&quot;ר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
@@ -15956,6 +15983,15 @@ Fapina''
 
 6. </pre>
 </div>
+<div created="20180629142454101" modified="20180630140931522" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
+<pre>[img[pictures/karl-ove.jpg]]
+
+!!![[יויו]]:
+
+
+
+[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה את הציור שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנגליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. [[תומר]] שהוא כבר אבא הביא לנו את ארבעת הכרכים המתורגמים של &quot;המאבק שלי&quot;,  ואנו מחכים לשניים הנוספים.</pre>
+</div>
 <div created="20170401220808061" modified="20170608171028060" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
 
@@ -16036,6 +16072,38 @@ Fapina''
 [[עכשיו אפשר לתבל אותו בדרכים רבות, למזוג אותו על דברים שונים ולאפות|קנלוני]].
 
 </pre>
+</div>
+<div created="20180617165026649" modified="20180619121542245" tags="[[חיות אוכל]] מתכונים [[סיפורים אמיתיים]]" title="רוסטביף">
+<pre>[img[pictures/roast-beef.jpg]]
+
+!!![[יויו]]:
+
+בשר זה עניין של מזל. גם אם יש לך סופר בוצ'ר, טעמה הבסיסי של החתיכה הוא החשוב ביותר. זה למעשה נכון לגבי כל דבר, טעמן של עגבניות, טעמו של שמן זית, טעמו של מלח, לחות הקמח, אך כל אלה משמעותיים הרבה פחות מטעמה הבסיסי של חתיכת הבשר. אני לא מומחה אבל אני בזמן האחרון מכין פעם בשבוע בערך, ולפעמים אפשר להשתגע מכמה שזה טעים, ולפעמים זה נחמד עד נחמד מאד, כי אם יש לך קצב מרהיב קשה שזה יהיה ממש לא טעים. 
+
+החומרים:
+
+* ק&quot;ג סינטה
+*שמן זית
+*כפית-כף חרדל עם דבש
+*שלוש שיני שום מקולפות וחצויות
+*מלח ים גס
+*פלפל שחור גרוס 
+
+אופן ההכנה:
+
+1. מחממים את התנור ל220 מעלות צלזיוס
+
+2. מניחים את חתיכת הבשר בתבנית עם החלק השומני למעלה וורצים בו שישה חריצים לתוכם מכניסים את חצאי שיני השום
+
+3. בעזרת הידיים מורחים שמן זית וחרדל באופן אחיד על החתיכה כולה
+
+4. מפזרים מלח ים ופלפל שחור גרוס
+
+5. מכניסים למרכז התנור ואופים 15 דקות ב-220 מעלות
+
+6. אחרי 15 הדקות מורידים את הטמפרטורה ל170- 180 מעלות ואופים ארבעים דקות נוספות. בין לבין רצוי לסובב את התבנית ומי שאוהב פחות דם יכול גם רבע שעה לפני סוף האפייה לחתוך שני חתכים בחלקו העליון שך הבשר.
+
+7. מוציאים מהתנור, נותנים לבשר לעמוד עוד 15 דקות ואפשר לחתוך ולאכול.</pre>
 </div>
 <div created="20170202133543180" modified="20171105164631520" tags="[[הנחלה בה גדלתי]]" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
@@ -16326,6 +16394,41 @@ Fapina''
 ^^או כספך חזרה^^
 
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
+</pre>
+</div>
+<div created="20180620184300136" modified="20180630112621795" tags="[[חיות אוכל]] [[אירי טוענת]] מתכונים" title="שוקולד פאדג'">
+<pre>[img[pictures/chocolate-fudge.jpg]]
+
+!!![[אירי]]:
+
+התפקיד האהוב עלי בעבודה אצל ז'נבייב הוא הכנת מנות אישיות של שוקולד פאדג'. תפקיד [[שסוניה|סוניה]] העבירה [[ליויו|יויו]] לפני, ועכשיו גם אלי אחר כבוד. אני מתה על שוקולד, ואתמול הכנתי כאן בבית מנה אחת שהספיקה לארבע צלחות של קרם ברולה בקוטר של 12 סנטימטרים. הלכתי עד הסוף, (מהבחינה שמים בתנור מוסיפים לחות ולכן פאדג'יות לפאדג'), ושמתי מעט מים בתבנית. השוקולד האפוי התבקע וזה היה מרגש ממש.
+
+המתכון:
+
+*180 גרם שוקולדד מריר
+*160 גרם חמאה
+*200 גרם סוכר
+*3 ביצים
+*3 חלמונים
+*20 גרם קורנפלור
+*מעט אלכוהול (השתמשתי ביין מרסלה)
+
+אופן ההכנה:
+
+1.  ממיסים את השוקולד והחמאה ומערבבים אותם במטרפה ידנית עד לקרם חלק.
+
+2.טורפים פנימה את הסוכר
+
+3. טורפים פנימה את הביצים והחלמונים אחת אחת 
+
+4. טורפים פנימה את הקורנפלור ואת האלכוהול
+
+5. מחממים תנור ל200 מעלות
+
+6. מוזגים לכלים 
+
+7. אופים עשר דקות, מנמיכים את החום ל 170 מעלות וממשיכים לאפות עוד 20 דקות עד 1/2 שעה לפי הצורך
+
 </pre>
 </div>
 <div created="20170717183951845" modified="20180605132530233" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
