--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -8950,7 +8950,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]] [[קופים ממונעים]] [[תחבורה ציבורית]]" title="$:/StoryList">
+<div list="[[קופים ממונעים]] הגשר [[אני הפסיכיאטר]] [[יסודי או ocd]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8970,7 +8970,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180605153430610" title="$:/temp/search">
+<div created="20161023184814872" modified="20180608112816920" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13047,12 +13047,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180605150218529" modified="20180605152943115" tags="[[קופים ממונעים]]" title="כרבולת בבית החזה">
+<div created="20180605150218529" modified="20180607162637281" tags="[[קופים ממונעים]]" title="כרבולת בבית החזה">
 <pre>[img[pictures/carbolet.jpg]]
 
 !!![[יויו]]:
 
-היה רגע בעברי בו שמתי לב שכשאני מבסוט מעצמי זה מלווה בהתנפחות קלה של בית החזה משל כרבולת של תרנגול מלא אגו על גבול הפעלת הכנפיים וקריאה מתגורר שם.</pre>
+היה רגע בעברי בו שמתי לב, שכשאני מבסוט מעצמי בעקבות איזו מחשבה שנראית לי מבריקה למשל, או משהו שעשיתי - זה מלווה בהתנפחות קלה של בית החזה משל כרבולת של תרנגול מלא אגו על גבול הפעלת הכנפיים וקריאה מתגוררת שם.</pre>
 </div>
 <div created="20170621135717036" modified="20180605131611882" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
@@ -13648,7 +13648,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20180605152050701" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20180607162438840" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
 
@@ -13657,7 +13657,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 על פי ז'נבייב, [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה [[ונקיון|מנקים היטב]].
 
 
-בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או [[מסבתא|סבתא שלנו]], מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
+בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את [[המתכון|מתכונים]] או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או [[מסבתא|סבתא שלנו]], מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
 
 &lt;img style=&quot;float:left; max-width:33%; margin: 0.5em&quot; src=&quot;pictures/knives.jpg&quot;&gt;
 לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
@@ -15818,7 +15818,7 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170817155826253" modified="20180315162741420" tags="סדרות" title="קופים ממונעים">
+<div created="20170817155826253" modified="20180608112837743" tags="סדרות [[סיפורים אמיתיים]]" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -15832,7 +15832,7 @@ Fapina''
 
 אנחנו כולנו כולנו, וכולנו זה [[אנחנו|https://i.pinimg.com/236x/c3/7a/64/c37a645d3911729deef9f23354ce32bc--northern-exposure-car-keys.jpg]], שהולכים בדרך, הופה היי.
 
-גם אני, אומנם נוסע [[בתחב&quot;צ|תחבורה ציבורית]], אך עדיין ממונע ששואל את עצמו, מה עוד הוא?
+גם אני, אומנם נוסע [[בתחב&quot;צ|תחבורה ציבורית]], אך עדיין ממונע ששואל את עצמו, מי אני? מה אני? איך הגעתי לכאן? ולמה?
 
 
 
@@ -16688,7 +16688,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170817170010531" modified="20180605163015741" tags="[[קופים ממונעים]]" title="תחבורה ציבורית">
+<div created="20170817170010531" modified="20170818045231062" title="תחבורה ציבורית">
 <pre>[img[pictures/tachbura-ziburit.jpg]]
 
 !!![[יויו]]:
