--- a/index.html
+++ b/index.html
@@ -8960,7 +8960,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קרל אובה קנאוסגורד]] [[להרוג את איב]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="מיזונפלציה [[קרל אובה קנאוסגורד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8980,7 +8980,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180627131306972" title="$:/temp/search">
+<div created="20161023184814872" modified="20180701161751383" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13675,8 +13675,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20180607162438840" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
-<pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
+<div created="20170112174310883" modified="20180701161743391" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
+<pre>[img[pictures/mizonplazya.jpg]]
 
 
 !!![[יויו]]:
@@ -15983,14 +15983,14 @@ Fapina''
 
 6. </pre>
 </div>
-<div created="20180629142454101" modified="20180630143327726" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
+<div created="20180629142454101" modified="20180630151941547" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
 <pre>[img[pictures/karl-ove.jpg]]
 
 !!![[יויו]]:
 
 
 
-[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה את הציור שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנג'ליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. [[תומר]] שהוא כבר אבא הביא לנו את ארבעת הכרכים המתורגמים של &quot;המאבק שלי&quot;,  ואנו מחכים לשניים הנוספים.</pre>
+[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה את הציור שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנג'ליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. אני מזדהה עם כל כך הרבה דברים שקרל אובה כותב עליהם והכי זה הוא ואינגבה אחיו, כמו שגורה ואני.</pre>
 </div>
 <div created="20170401220808061" modified="20170608171028060" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
