--- a/index.html
+++ b/index.html
@@ -493,6 +493,8 @@ Error message and password prompt
 
 <li>האחיות כהן</li>
 
+<li>האחים</li>
+
 <li>האנטומיה של גריי</li>
 
 <li>האסיפה הראשונה</li>
@@ -784,6 +786,8 @@ Error message and password prompt
 <li>למה הדבר דומה</li>
 
 <li>לפתן חבושים</li>
+
+<li>לצייר</li>
 
 <li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
 
@@ -8948,10 +8952,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180630112232795" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180703134625687" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180630112634758" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180703134910678" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8960,7 +8964,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מיזונפלציה [[קרל אובה קנאוסגורד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="לצייר האחים דליקטסן [[אבא יואל]] תומר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8980,7 +8984,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180701161751383" title="$:/temp/search">
+<div created="20161023184814872" modified="20180703134621746" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11420,6 +11424,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
+<div created="20180702120433551" modified="20180704045314139" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות" title="האחים">
+<pre>[img[pictures/the-brothers.jpg]]
+
+!!![[יויו]]:
+
+[[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן]].</pre>
+</div>
 <div created="20171002200359738" modified="20180420221908730" tags="סדרות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
@@ -11931,7 +11942,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161213170938039" modified="20170517235841154" title="הקוסקוס">
+<div created="20161213170938039" modified="20180702173420840" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]]" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
@@ -13470,6 +13481,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20180702161904435" modified="20180704054132597" tags="[[סיפורים אמיתיים]]" title="לצייר">
+<pre>[img[pictures/lezayer.jpg]]
+
+!!![[גורה]]:
+
+גם עלי [[קרל אובה|קרל אובה קנאוסגורד]] משפיע. יש רגעים בהם המילים שלו ממש מציירות. הוא מספר על החיים ואגב כך, בין השאר, על ציירים, ציורים, מראות, נוף. הוא מתאר בסבלנות ובקול ברור כל דבר ודבר. גם אני שואפת להחשב כותבת, אבל עכשיו: אני כותבת אך גם מציירת על דפי בריסטול בגודל A4, ומשתמשת בעפרונות שמן צבעוניים. אני מציירת לאתר בלבד, ואם אין לי מה לצייר אני מוצאת. אני מחליטה מה אצייר, לפעמים אני אוספת כמה צילומים שצילמתי או צילומים ממנועי חיפוש, ומחברת אותם לתמונה אחת, ראש מפה, חדר משם. אחרי שאני מסיימת עם העפרון אני צובעת - שזה הדבר המהנה ביותר עבורי. עוד צבע ועוד צבע. צבעים תמיד היפנטו אותי כמו צלילים, וכשהם יחדיו אז הם כמו מוסיקה - מרוממים. זה לא שקל לי לצייר, זה גם לא שאני סובלת - אבל יש רגעים שהראש מתעוות לי מבפנים מרוב מאמץ, והתוצאה רחוקה מלהיות  זו שתכננתי או דמיינתי, ועדיין זה הדבר שאני הכי רוצה לעשות. </pre>
+</div>
 <div created="20170702003010520" modified="20170702004243834" tags="[[הנה, כך]]" title="לצייר גרפיטי וירטואלי במִיצְפֶּרֶש">
 <pre>[img[pictures/anarchist-grafitti.jpg]]
 
@@ -13675,7 +13693,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20180701161743391" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20180701162556461" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]]" title="מיזונפלציה">
 <pre>[img[pictures/mizonplazya.jpg]]
 
 
@@ -13687,7 +13705,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את [[המתכון|מתכונים]] או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או [[מסבתא|סבתא שלנו]], מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
 
 &lt;img style=&quot;float:left; max-width:33%; margin: 0.5em&quot; src=&quot;pictures/knives.jpg&quot;&gt;
-לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
+לאחרונה שמתי לב, [[שאני מזנפלץ ומזונפלץ כל הזמן|יסודי או ocd]]. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
 חדר העבודה שלי תמיד ערוך לכל משימה. יש שם, כמובן, את כל הציוד הנדרש, ולעולם אסדר הכל ואסגור הכל כשמסתיימת העבודה.
 אם משהו מתקלקל או מסתבך לא אשאיר אותו בלתי מתוקן.
 
@@ -15983,14 +16001,14 @@ Fapina''
 
 6. </pre>
 </div>
-<div created="20180629142454101" modified="20180630151941547" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
+<div created="20180629142454101" modified="20180703111644550" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
 <pre>[img[pictures/karl-ove.jpg]]
 
 !!![[יויו]]:
 
 
 
-[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה את הציור שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנג'ליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. אני מזדהה עם כל כך הרבה דברים שקרל אובה כותב עליהם והכי זה הוא ואינגבה אחיו, כמו שגורה ואני.</pre>
+[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה [[את הציור|לצייר]] שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנג'ליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. אני מזדהה עם כל כך הרבה דברים שקרל אובה כותב עליהם והכי זה הוא ואינגבה אחיו, כמו שגורה ואני.</pre>
 </div>
 <div created="20170401220808061" modified="20170608171028060" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
