--- a/index.html
+++ b/index.html
@@ -1007,6 +1007,8 @@ Error message and password prompt
 
 <li>פינה באוש</li>
 
+<li>פיקוק</li>
+
 <li>פלא אוזן</li>
 
 <li>פלפלים קלויים</li>
@@ -8980,7 +8982,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פסטה מיאה]]" title="$:/StoryList">
+<div list="פיקוק [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15617,6 +15619,15 @@ __אופן ההכנה____
 [[זה|https://www.youtube.com/watch?v=LA65HrIMrjs]] למשל, קטע שרקדן של הלהקה הביא לאחר חופשה, [[ונכנס|https://www.youtube.com/watch?v=CIrRR48s5As]] למופע ציפורנים.
 
 [[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה השתמשו בשמו [[ב-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
+</pre>
+</div>
+<div created="20180719134829793" modified="20180719182801666" tags="[[כאן בגטו]]" title="פיקוק">
+<pre>[img[pictures/peacock.jpg]]
+
+!!![[תומר]]:
+
+כן, בגטו המיטיב, במעלה מרמורק, שוכן [[הפיקוק|http://peacock.rest.co.il/]], שהוא בר הכי שווה, שנפתח בשש בערב, השעות בהן מזה כמה חודשים אני אבא לתינוקת, ואחר כך עייף מאד ממחר המתקרב, אך כשהולך - הולך לפיקוק.
+
 </pre>
 </div>
 <div created="20180408155155270" modified="20180408180604856" tags="[[אחיות חוץ]] מוזיקה" title="פלא אוזן">
