--- a/index.html
+++ b/index.html
@@ -8982,7 +8982,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פיקוק [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9002,7 +9002,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180712144043223" title="$:/temp/search">
+<div created="20161023184814872" modified="20180720105043339" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9830,13 +9830,13 @@ well,
 
 </pre>
 </div>
-<div created="20170731120559711" modified="20170731194423790" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
+<div created="20170731120559711" modified="20180720111748516" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
 
 !!![[אירי]]:
 
 
-[[איזדורה דאנקן|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%96%D7%93%D7%95%D7%A8%D7%94_%D7%93%D7%90%D7%A0%D7%A7%D7%9F]] לא אהבה את קשיחות הטכניקה של המחול הקלאסי, ואת התכחשותו לכח הכבידה. היא טענה כי הוא מגביל את יכולת הביטוי שלה. היא הסירה את נעלי הריקוד, ונתנה לתנועות ולקשר עם האדמה לקחת את הגוף - וכל זה בתחילת המאה ה-20, ועוד לא דיברנו על חייה האישיים של האישה המהפכנית הזו.
+[[איזדורה דאנקן|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%96%D7%93%D7%95%D7%A8%D7%94_%D7%93%D7%90%D7%A0%D7%A7%D7%9F]] לא אהבה את קשיחות הטכניקה של המחול הקלאסי, ואת התכחשותו לכח הכבידה. היא טענה כי הוא מגביל את יכולת הביטוי שלה. היא הסירה את נעלי הריקוד, ונתנה לתנועות ולקשר עם האדמה לקחת את הגוף - וכל זה בתחילת המאה ה-20, וזה עוד לפני הזכרנו את חייה האישיים של האישה המהפכנית הזו.
 
 </pre>
 </div>
@@ -11244,7 +11244,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20180405191206974" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה" title="דיוויד בואי">
+<div created="20170105154405192" modified="20180720110331942" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -11258,7 +11258,7 @@ Is where I want to be
 
 דיוויד בואי הוא אולי האדם הכי חייזרי במובן הטוב ביותר של המילה, ששהה על הכדור הזה בתקופה הזו, והוא היה הכי שאפשר מכל בחינה שהיא, כולל [[המגדר הלא מוגדר|גבריאל פורה]]. הרעיון שכדור הארץ הוא בעצם [[גלות]] תפס אותי. לא פעם חשבתי שיכול להיות שהנשמה יכולה להתגלגל בין כוכבים במרחב האינסופי. כשהייתי ילדה נהגתי לספור את נקודות החן שעל גופי, וחשבתי שבטח החיבור ביניהן הוא צורתו של הכוכב ממנו הגעתי. עד כיתה ב' היו לי 27 נקודות חן, ובערך אז הפסקתי לספור. 
 
-מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היי רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות [[פרדריק מתיאס אלכסנדר|פ.מ.אלכסנדר]], בואי נשמע לי הרבה יותר כייף. 
+מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היית רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות [[פרדריק מתיאס אלכסנדר|פ.מ.אלכסנדר]], בואי נשמע לי הרבה יותר כייף. 
 
 
 
@@ -12392,12 +12392,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[וזה הכל בינתיים|https://www.youtube.com/watch?v=ixl8xKyv-8E&amp;index=3&amp;list=PLXhoL6TJUCjYLAo1mw50eUrj5JrdEEoqC]] (בינתיים זה הכל)</pre>
 </div>
-<div created="20161026214908307" modified="20170720150544591" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] [[אירי טוענת]]" title="יויו">
+<div created="20161026214908307" modified="20180720170719716" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] [[אירי טוענת]]" title="יויו">
 <pre>!!![[אירי]]:
 
 [img[pictures/yoyo.jpg]]
 
-עבורי יויו היה, ראשית כל, האח האהוב של גורה, אותה הכרתי כשהיינו בנות 12.
+עבורי יויו היה, ראשית כל, האח האהוב של גורה, אותה הכרתי בתחילת חטיבת הביניים.
 
 כעת הוא האלוהים שלי. [[אני מאמינה לו|גבר פריבילגי]], אני מאמינה בו, אני מאמינה למה שהוא מאמין בו, אני מעריצה אותו, אני אוהבת אותו, אני אוהדת אותו, אני מודה לו מידי יום, אני נעזרת בו, אני מקשיבה לו, אני [[מתה על הטעם|כרובית במחבת]] שלו ועל הראש שלו - ואני רוצה תמיד להיות סמוכה לשולחן סביבו הוא סועד את לבו המתוק.
 
@@ -12494,7 +12494,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20180718171703765" title="כאן בגטו">
+<div created="20180712143703187" modified="20180721105405079" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
