--- a/index.html
+++ b/index.html
@@ -621,6 +621,8 @@ Error message and password prompt
 
 <li>חשיפה לצפון</li>
 
+<li>טוני וספה</li>
+
 <li>טוני סופרנו</li>
 
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
@@ -8982,7 +8984,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[טוני וספה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11228,7 +11230,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180715194223602" modified="20180719122638576" tags="[[כאן בגטו]]" title="גרציאני">
+<div created="20180715194223602" modified="20180722161427092" tags="[[כאן בגטו]] [[חיות אוכל]]" title="גרציאני">
 <pre>[img[pictures/grasyani.jpg]]
 
 !!![[תומר]]:
@@ -12219,7 +12221,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20180715130735407" modified="20180718181147718" tags="[[כאן בגטו]]" title="חינאווי">
+<div created="20180715130735407" modified="20180722161438693" tags="[[כאן בגטו]] [[חיות אוכל]]" title="חינאווי">
 <pre>[img[pictures/hinawi.jpg]]
 
 !!![[תומר]]:
@@ -12299,6 +12301,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[סיסלי|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]] בשבילי היא [[בית שני|קופים ממונעים]], ואד, ג'ואל, הולינג, שלי, כריס, רות'-אן, מגי, מרילין וכל השאר -  הם גם - אחיות שלי
 
 [[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]                          (אחד מקטעי הוידאו הבודדים שנשארו ביוטיוב)</pre>
+</div>
+<div created="20180722161146770" modified="20180722172114382" tags="[[כאן בגטו]] [[חיות אוכל]]" title="טוני וספה">
+<pre>[img[pictures/tony-vespa.jpg]]
+
+!!![[תומר]]:
+
+אני לא פריק של פיצה אבל כשזה קורה אז[[בטוני וספה|https://www.tonyvespa.co.il/]], בעניין הזה אין שאלה.</pre>
 </div>
 <div created="20170922153729733" modified="20180130113644356" tags="הסופרנוס" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
@@ -13364,7 +13373,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180713195240465" modified="20180719123114448" tags="[[כאן בגטו]]" title="לחמים">
+<div created="20180713195240465" modified="20180722161411242" tags="[[כאן בגטו]] [[חיות אוכל]]" title="לחמים">
 <pre>[img[pictures/breads.jpg]]
 
 !!![[תומר]]:
@@ -15621,7 +15630,7 @@ __אופן ההכנה____
 [[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה השתמשו בשמו [[ב-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
 </pre>
 </div>
-<div created="20180719134829793" modified="20180719183039436" tags="[[כאן בגטו]]" title="פיקוק">
+<div created="20180719134829793" modified="20180722161334015" tags="[[כאן בגטו]] [[חיות אוכל]]" title="פיקוק">
 <pre>[img[pictures/peacock.jpg]]
 
 !!![[תומר]]:
@@ -15708,7 +15717,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20180715130000278" modified="20180719123224968" tags="[[כאן בגטו]]" title="פסטה מיאה">
+<div created="20180715130000278" modified="20180722161351698" tags="[[כאן בגטו]] [[חיות אוכל]]" title="פסטה מיאה">
 <pre>[img[pictures/pasta-mia.jpg]]
 
 !!![[תומר]]:
