--- a/index.html
+++ b/index.html
@@ -8984,7 +8984,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[טוני וספה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="פיקוק [[כאן בגטו]] חינאווי גרציאני [[בשביל הפרחים]] [[טוני וספה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12503,13 +12503,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20180721105405079" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
+<div created="20180712143703187" modified="20180723180358184" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
 
 
-הדבר היחידי שחסר לי כאן בגטו זה חנות ירקות כמו שצריך, וכדי לקנות ירקות ופירות טובים אני נאלץ לצאת מתחום הנוחות שלי ולהרחיק עד שיינקין. 
+הדבר היחידי שחסר לי כאן [[בגטו|https://www.youtube.com/watch?v=2Ox1Tore9nw]] זה חנות ירקות כמו שצריך, וכדי לקנות ירקות ופירות טובים אני נאלץ לצאת מתחום הנוחות שלי ולהרחיק עד שיינקין. 
 
 &lt;&lt;list-links filter:&quot;[tag[כאן בגטו]]&quot;&gt;&gt;
 </pre>
