--- a/index.html
+++ b/index.html
@@ -1083,6 +1083,8 @@ Error message and password prompt
 
 <li>שוקולד פאדג'</li>
 
+<li>שורצקי</li>
+
 <li>שותה עם גורה</li>
 
 <li>שיטת אלכסנדר</li>
@@ -8972,10 +8974,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180712143350293" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180725160000033" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180712143358342" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180725160001224" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8984,7 +8986,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פיקוק [[כאן בגטו]] חינאווי גרציאני [[בשביל הפרחים]] [[טוני וספה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] שורצקי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12503,13 +12505,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20180723180358184" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
+<div created="20180712143703187" modified="20180725155949442" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
 
 
-הדבר היחידי שחסר לי כאן [[בגטו|https://www.youtube.com/watch?v=2Ox1Tore9nw]] זה חנות ירקות כמו שצריך, וכדי לקנות ירקות ופירות טובים אני נאלץ לצאת מתחום הנוחות שלי ולהרחיק עד שיינקין. 
+הדבר היחידי שחסר לי כאן [[בגטו|https://www.youtube.com/watch?v=2Ox1Tore9nw]] זה חנות ירקות כמו שצריך, וכדי לקנות ירקות ופירות טובים אני נאלץ לצאת מתחום הנוחות שלי ולהרחיק עד [[שינקין|שורצקי]]. 
 
 &lt;&lt;list-links filter:&quot;[tag[כאן בגטו]]&quot;&gt;&gt;
 </pre>
@@ -16546,6 +16548,15 @@ Fapina''
 7. אופים עשר דקות, מנמיכים את החום ל 170 מעלות וממשיכים לאפות עוד 20 דקות עד 1/2 שעה לפי הצורך
 
 </pre>
+</div>
+<div created="20180725153933793" modified="20180725162340620" tags="[[כאן בגטו]]" title="שורצקי">
+<pre>[img[pictures/shorezky.jpg]]
+
+!!![[תומר]]:
+
+אם אין את זה //[[בשורצקי|https://www.shoretzki.com/]], לא צריך את זה!// 
+
+המכולת של המשפחה הכי חמודה ואוהבת על  הוריה וילדיה ועובדיה, אחד אחד משובחים ונבחרים, כולל המוצרים שמסודרים על המדפים, כולל המשלוחים, כולל טיפול פסיכולוגי אצל הקופאי/ת.</pre>
 </div>
 <div created="20170717183951845" modified="20180704184958199" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
 <pre>[img[pictures/miz-anavim.jpg]]
