--- a/index.html
+++ b/index.html
@@ -8986,7 +8986,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] שורצקי [[האחיות כהן]]" title="$:/StoryList">
+<div list="שורצקי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16549,14 +16549,14 @@ Fapina''
 
 </pre>
 </div>
-<div created="20180725153933793" modified="20180725162340620" tags="[[כאן בגטו]]" title="שורצקי">
+<div created="20180725153933793" modified="20180725164627521" tags="[[כאן בגטו]]" title="שורצקי">
 <pre>[img[pictures/shorezky.jpg]]
 
 !!![[תומר]]:
 
 אם אין את זה //[[בשורצקי|https://www.shoretzki.com/]], לא צריך את זה!// 
 
-המכולת של המשפחה הכי חמודה ואוהבת על  הוריה וילדיה ועובדיה, אחד אחד משובחים ונבחרים, כולל המוצרים שמסודרים על המדפים, כולל המשלוחים, כולל טיפול פסיכולוגי אצל הקופאי/ת.</pre>
+מחוץ לרדיוס הקרוב ממש, בצד השני של השדרה, במורד שינקין, נמצאת המכולת של המשפחה הכי חמודה ואוהבת על  הוריה וילדיה ועובדיה, אחד אחד משובחים ונבחרים, כולל המוצרים שמסודרים על המדפים, כולל המשלוחים, כולל טיפול פסיכולוגי אצל הקופאי/ת.</pre>
 </div>
 <div created="20170717183951845" modified="20180704184958199" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
 <pre>[img[pictures/miz-anavim.jpg]]
