420, האחיות בלות, שיח קפה

--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ Error message and password prompt
 
 <li>$:/user/styles</li>
 
+<li>420</li>
+
 <li>bg</li>
 
 <li>English</li>
@@ -498,6 +500,8 @@ Error message and password prompt
 <li>האוס</li>
 
 <li>האחיות K</li>
+
+<li>האחיות בלות</li>
 
 <li>האחיות כהן</li>
 
@@ -1086,6 +1090,8 @@ Error message and password prompt
 <li>שורצקי</li>
 
 <li>שותה עם גורה</li>
+
+<li>שיח קפה</li>
 
 <li>שיטת אלכסנדר</li>
 
@@ -8977,7 +8983,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180725160000033" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180725160001224" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180802195107593" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8986,7 +8992,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="שורצקי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שיח קפה]] 420 [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9151,6 +9157,13 @@ Error message and password prompt
 .tootdiv a {text-decoration: none; color: #f00}
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
+</div>
+<div created="20180802192842799" modified="20180802200044943" tags="[[כאן בגטו]]" title="420">
+<pre>[img[pictures/420.jpg]]
+
+!!![[תומר]]:
+
+[[תדר הראסטה|https://www.rastafrequency.co.il/420-shop-tel-aviv/]] זה מה שמדבר, ו-420 היא החנות הקטנה והמטריפה של המותג. היא נמצאת בקינג-ג'ורג' 30 על בורוכוב 2, והיא חלק ממכלול של עשייה שהאנשים האלה עושים. יש שם טבק ואביזרי עישון אבל גם מיני חפיצים, ואני תמיד אוהב לקנות שם איזו שרשרת עץ צבעונית של אפריקה או איזה ארנק נחמד [[לפרח|גן-יה]], או דבר מה יפה אחר, ולדבר עם המוכר.</pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
@@ -11448,6 +11461,18 @@ different tastes, but there were things we both love: family, work, people in al
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
+<div created="20180731155632659" modified="20180802195754219" tags="" title="האחיות בלות">
+<pre>[img[pictures/bloot-sisters.jpg]]
+
+!!![[אווה]]:
+
+בשעות אחר הצהריים המאוחרות של ימי רביעי, [[ז'נבייב]], [[סוניה]] ואני נפגשות לארוחה ומשקה ולהיפך, ומשוחחות להנאתנו.
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
+</div>
 <div created="20161111215423587" modified="20171119080327057" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
@@ -12505,7 +12530,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20180725155949442" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
+<div created="20180712143703187" modified="20180731155655088" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
@@ -16572,6 +16597,15 @@ Fapina''
 2. על כל שוט של וודקה הוספנו חצי כוס ממיץ ענבים וקרח מלוא הכוס
 
 והיה מעולה</pre>
+</div>
+<div created="20180726193443645" modified="20180802195815980" tags="[[כאן בגטו]]" title="שיח קפה">
+<pre>[img[pictures/siach-cafe.jpg]]
+
+!!![[תומר]]: 
+
+אחרי [[שורצקי]], עוד קצת במורד הרחוב, אני קונה קפה ששרלי, שיודע את שפתם של הפולים, קלה וטחן בשינקין 50. 
+
+</pre>
 </div>
 <div created="20161206222443036" modified="20170907165207735" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
